# manicure-bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
database/: db.py  models.py
handlers/: admin.py  appointment.py  common.py  info.py  portfolio.py
keyboards/: inline_kb.py  reply_kb.py
states/: __init__.py
utils/: cache.py  helpers.py  scheduler.py
